- Added ServerMapquery::queryByMsShape(), useful to perform queries using MapScript ShapeObj objects
- Added statsReports plugin / stats script: generate human readable visual report based on Cartoweb and WMS log
- Added portuguese translations (thanks to K2 Sistemas)
- Added security parameter "security_view" for children switching

2007-07-26: CartoWeb 3.4.0
===================

- Added some new images plugin filter parameters:
    o Map image size set dynamically via GET parameters ;
    o Image mode now allow output of map, keymap and scalebar separately.
- Made URLs clickable in exportPdf documents.
- Added addRowSelector table rule tool.
- Added GET capabilities to outline plugin to generate on-the-fly point, line or polygon outline via URL.
- Added new --clean-views and --clean-accounting options to cw3setup.php
- Added LDAP storage for auth plugin
- LayerOverlay accepts 'filter' and 'filteritem' attributes (patch from Dirk Jesko)
- Added 'db_direct' method to store accounting information
- Added free (user) scale input in location coreplugin
- Added 'bboxHistory' plugin: allows the user to navigate through bbox history.
- Added WMS browser light and OgcLayerLoader plugins to make WMS layers loading more user-friendly.
- Added exportRtf plugin which gives the possibility to export the map in a RTF format.
- Added multiple resolutions for legend icons.
- Added exportImg plugin, similar to mode=image but via a template and allowing direct access to the generated image.

2006-08-31: CartoWeb 3.3.0
==========================

- Added accounting infrastucture, to log request informations. This can be used for statistics.
- Added tools for queries by point, polygon and circle (in addition to existing query-by-bbox tool).
- Added AJAX support in plugins.
- Added WMS-layers browsing plugin.
- Added hooks capabilities in views processing.
- Added sampleProject, a start project to build your own ones upon it.
- Added DXF export.