@@ -12,6 +12,8 @@ general.overviewOutlineColor = red
 general.showRefMarks = true
 general.defaultOrientation = portrait
 general.activatedBlocks = mainmap, title, note, scalebar, overview, copyright, queryResult, page, date, legend, scaleval, tlcoords, brcoords, logo, north
+general.specialLayers.some_rectangles.addBlocks = logo2
+general.specialLayers.some_rectangles.removeBlocks = logo
 
 general.pdfEngine = CwFpdf
 general.pdfVersion = 1.3
@@ -154,15 +156,26 @@ blocks.date.height = 6
 blocks.date.zIndex = 7
 
 blocks.logo.type = image
-blocks.logo.content = "htdocs/gfx/layout/c2c.png"
-blocks.logo.width = 40
-blocks.logo.height = 7
+blocks.logo.content = "htdocs/gfx/layout/c2c_orange.png"
+blocks.logo.width = 30
+blocks.logo.height = 20
 blocks.logo.padding = 2
 blocks.logo.parent = mainmap
 blocks.logo.horizontalBasis = right
 blocks.logo.inFlow = false
 blocks.logo.horizontalMargin = 5
 blocks.logo.verticalMargin = 5
+
+blocks.logo2.type = image
+blocks.logo2.content = "htdocs/gfx/layout/c2c.png"
+blocks.logo2.width = 40
+blocks.logo2.height = 7
+blocks.logo2.padding = 2
+blocks.logo2.parent = mainmap
+blocks.logo2.horizontalBasis = right
+blocks.logo2.inFlow = false
+blocks.logo2.horizontalMargin = 5
+blocks.logo2.verticalMargin = 5
 
 blocks.scaleval.zIndex = 4
 blocks.scaleval.height = 6
